--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Team</title>
+    <!--add file css-->
+    <link rel="stylesheet" href="css/style.css">
+    <!--/add file css-->
 </head>
-<body>
+<body class="container">
     <h1>Our Team</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos id delectus exercitationem perspiciatis ullam necessitatibus laudantium dignissimos alias velit. Fugit unde officiis nulla sint impedit laudantium minima reprehenderit deserunt?</p>
     <ul id="grid-cards">
         <!--elementi creati in js -->
     </ul>
     <!--add file js-->
-    <script src="myscript.js"></script>
+    <script src="js/myscript.js"></script>
     <!--/add file js-->
 </body>
 </html>
